--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -82,7 +82,7 @@ jobs:
     needs: push-to-docker-hub
     environment:
       name: Capstone Project # Capstone Project name
-      url: https://neuefische.de/ # Link to deployment
+      url: https://cgn-java-24-1-cd-to-render.onrender.com # Link to deployment
     steps:
       - name: Trigger Render.com Deployment
         run: |
